--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </section>
     </footer>
 
-    <script src="js/index.js" type="module"></script>
+    <script src="https://www.rollercoincalc.online/js/index.js" type="module"></script>
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
@@ -261,6 +261,5 @@
           }]
         }
         </script>
-	<script data-name="BMC-Widget" data-cfasync="false" src="1.0.0/widget.prod.min.js" data-id="AsadSumbul" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
