--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="./css/halloween-theme.css"> -->
     <!-- <link rel="stylesheet" href="./css/christmas-theme.css"> -->
-    <link rel="canonical" href="index.htm">
+    <link rel="canonical" href="fatihcelikofficial.github.io">
     <title>RCHesapla - RollerCoin Kişisel Kazım Gücünü Hesapla!</title>
     <meta name="description" content="Rollercoin oyununda RollerCoin kazancınızı tahmin etmek için RollerCoin Hesaplayıcıyı kullanın. Doğru tahminler alın ve pazar trendleri hakkında güncel kalın. Şimdi kazanmaya başlayın!">
 <!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E5K1H8D9BJ"></script> -->
