--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     </main>
 
     <div class="asad">
-        <h2>How It Works?</h2><br>
-        <p>Discover Your Potential Earnings in Three Simple Steps </p><br>
+        <h2>Nasıl çalışır?</h2><br>
+        <p>Potansiyel Kazancınızı Üç Basit Adımda Keşfedin</p><br>
 <ol>
            <li>Input Your Hash Rate: Lütfen the hash rate of your mining rig in the calculator. The hash rate is a measure of the processing power of your rig and is usually measured in hashes per second.</li>
             
